done with alerts

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "yolk-ui",
-    "displayName": "Yolk-UI",
+    "displayName": "Yolk UI",
     "description": "Helps to generate Php Yolk UI codes",
     "version": "1.0.0",
     "publisher": "Frederick Ennin",
